# code-archaeologist

./: .dockerignore  .env.example  .gitignore  BUILD_CPP_TRACER.md  BUILD_C_DLL.md  DEPLOY_RENDER.md  Dockerfile  README.md  SUPABASE_SETUP.md  WEEK2_COMPLETE.md  WEEK2_SUMMARY.md  WEEK3_SUMMARY.md  WEEK4_SUMMARY.md  check_build_tools.ps1  check_tools.bat  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt  results.csv  setup.py  setup_fast_ast.py  test_api.py  test_multi_language.py  test_week4.py
.github/workflows/: code-archaeologist.yml
api_usage/: api_keys.json
backend/: __init__.py  main.py
backend/ai/: llm_explainer.py
backend/api/: batch_analysis.py  main.py  pdf_export.py  pricing.py
backend/auth/: __init__.py  dependencies.py  models.py  router.py  supabase_client.py
backend/causal/: __init__.py  causal_discovery.py  what_if_simulator.py
backend/core/: __init__.py  models.py
backend/graph/: __init__.py  build_cpp.bat  build_graph_simple.bat  builder.py  fast_graph.cpp  fast_graph.dll.old  fast_graph.exp  fast_graph.h  fast_graph.lib  fast_graph_wrapper.py  queries.py  score_benchmark.py
backend/tracer/: __init__.py  batch_tracer.py  build_cpp_tracer.bat  build_fast_ast.bat  build_tracer_simple.bat  cpp_tracer.cpp  cpp_tracer.py  cpp_tracer_wrapper.py  dwarf_parser.cpp  fast_ast.cpp  fast_ast.exp  (+5 more)
backend/tracer/rust/: Cargo.toml
backend/tracer/rust/src/: main.rs
cli/: codearch.py
docker/: Dockerfile.sandbox  entrypoint.sh
docs/: TRACE_FORMAT_SPEC.md
tests/: sample_code.py  sample_cpp.cpp  test_trace.py
(+29 files in other folders)
