[project]
name = "code-archaeologist"
version = "0.1.0"
description = "Dynamic code tracing and causal graph analysis for legacy Python systems."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.7.0",
    "streamlit==1.26.0",
    "networkx==3.4",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
